attempt header fix on mobile

--- a/style.css
+++ b/style.css
@@ -70,6 +70,12 @@ header nav ul li a {
     }
 }
 
+@media (max-width: 400px) {
+    header nav ul li a {
+        font-size: 0.8em;
+    }
+}
+
 main {
     padding: 20px;
 }
